# Tensor-Based-Quantum-Metrology-Stack-for-POVMs-Continuous-Measurement-and-Fisher-Information-Bounds

./: README.md  pyproject.toml
docs/: index.md
docs/qmet_guide/: macros.tex  main.tex  preamble.tex
docs/qmet_guide/sections/: 00_scope.tex  01_math_core.tex  02_sensor_api.tex  03_measurement_models.tex  04_estimation_stack.tex  05_protocol_library.tex  06_noise_stability.tex  07_validation.tex  08_performance.tex  09_examples.tex  10_roadmap.tex  11_flagship_experiments.tex  12_case_studies.tex
src/qmet/: __init__.py  cli.py
src/qmet/case_studies/: __init__.py  nv_ramsey_sensitivity.py  readout_chain_example.py
src/qmet/core/: config.py  linalg.py  types.py  units.py
src/qmet/data/: README.md  example_allan.csv  example_psd.csv
src/qmet/estimation/: bayes.py  crb.py  filters.py  fisher.py  likelihood.py
src/qmet/flagship/: __init__.py  quantum_limited_sensing.py  ramsey_dephasing.py  weak_measurement_qubit.py
src/qmet/measurement/: backaction.py  continuous.py  povm.py  readout_noise.py
src/qmet/metrics/: bandwidth.py  sensitivity.py  stability.py
src/qmet/noise/: allan.py  drift.py  psd.py
src/qmet/protocols/: interferometry.py  ramsey.py  spin_echo.py  squeezing.py
src/qmet/sensor/: calibration.py  device_response.py  sensor_model.py
src/qmet/viz/: plots.py
src/qmet/workflows/: experiments.py  pipelines.py  reports.py
tests/: test_fisher_crb_consistency.py  test_flagship_ramsey.py  test_flagship_weak_measurement.py
